# dev

./: .cursorrules  .gitignore  README.md  hello.py  launch-agent.sh  pyproject.toml  task.md  tox.ini
cli/: README.md  pyproject.toml
cli/src/dev/commands/: repos.py
cli/tests/: test_cli.py  test_repo_config.py  test_task_manager.py
dev-cli/: README.md  tox.ini
dev-cli/src/dev/: cli.py
dev-cli/src/dev/commands/: __init__.py  create_pr.py  daemon.py  task.py
dev-cli/tests/: test_cli.py  test_create_pr.py  test_task_manager.py
dev-cloud-control/: README.md  pyproject.toml
dev-cloud-control/src/dev_cloud_control/: __init__.py  handler.py  lambda_entry.py  store.py
dev-cloud-control/tests/: test_cleanup_index.py  test_handler.py
dev-cloud-infra/: README.md  cdk.json  pyproject.toml
dev-cloud-infra/scripts/: cleanup-index-feed.py  deploy-cloud-and-worker.sh  deploy.sh  migrate-s3-logs.py  package-lambda.sh  package-stream-lambda.sh  set-cursor-api-key.sh
dev-cloud-infra/src/dev_cloud_infra/: app.py
dev-cloud-stream/: index.mjs  package.json
dev-cloud-worker/: README.md  bootstrap-environment.sh  install.sh  pyproject.toml  setup-cursor.sh  update-worker.sh  wire-cursor-environment.sh
dev-cloud-worker/src/dev_cloud_worker/: main.py  poller.py  stream_supervisor.py  telemetry.py
dev-cloud-worker/tests/: test_execute.py  test_poller.py
dev-daemon/: README.md  deploy.sh  dev-daemon.service.example  install.sh  restart.sh  start.sh
dev-frontend/: .env.example  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
dev-frontend/public/: manifest.webmanifest  notification-sw.js
dev-frontend/src/: App.css  App.test.tsx  App.tsx  AppErrorBoundary.test.tsx  AppErrorBoundary.tsx  QuestionAnswerForm.test.tsx  QuestionAnswerForm.tsx  TaskNotificationBanner.tsx  api.test.ts  api.ts  bashTranscript.test.ts  bashTranscript.ts  cloudAuth.test.ts  cloudAuth.ts  environmentDiagnostics.tsx  feedScrollNav.test.ts  feedScrollNav.ts  index.css  logParser.test.ts  logParser.ts  main.tsx  notificationServiceWorker.ts  questionForm.test.ts  questionForm.ts  taskNotifications.test.ts  taskNotifications.ts  taskStatus.ts  useOsNotificationTestWait.test.ts  useOsNotificationTestWait.ts  useTaskListPoll.tsx  vite-env.d.ts
dev-sdk/: README.md  pyproject.toml
dev-sdk/src/dev_sdk/: __init__.py  agent.py  agent_run.py  agent_runner.py  bash_runner.py  bots_config.py  branch_status.py  comms.py  create_pr.py  daemon.py  drafts.py  exceptions.py  feed.py  merge_from_main.py  prompts.py  question_answers.py  question_schema.py  repo_config.py  storage.py  stream_json.py  stream_sse.py  task_commands.py  task_list_status.py  task_manager.py  task_store.py  worker_sync.py  workflows.py
dev-sdk/src/dev_sdk/prompts/: implement_mode.md  merge_conflict_mode.md  plan_mode.md  question_mode.md
dev-sdk/tests/: __init__.py  test_agent_run.py  test_bash_runner.py  test_branch_status.py  test_comms.py  test_create_pr.py  test_daemon.py  test_feed.py  test_feed_pagination.py  test_merge_from_main.py  test_pull_pr_comments.py  test_question_answers.py  test_question_schema.py  test_repo_config.py  test_storage.py  test_stream_json.py  test_task_list_status.py  test_task_manager.py  test_worker_sync.py
dev-server/: README.md  pyproject.toml
dev-server/src/dev_server/: __init__.py  main.py
dev-server/tests/: test_archive_pagination.py  test_commands.py  test_copy_from_archive.py  test_create_task_stream.py  test_delete_comms.py  test_drafts.py  test_feed.py  test_feed_pagination.py  test_list_tasks.py  test_log_stream.py  test_question_answers.py  test_repos.py
pr-comments/: README.md  pyproject.toml
pr-comments/src/pr_comments/: __init__.py  auth.py  cli.py  config.py  dedupe.py  errors.py  format.py  models.py  parse.py  pull.py
pr-comments/src/pr_comments/providers/: bitbucket.py  github.py
pr-comments/tests/: test_bitbucket.py  test_dedupe.py  test_format.py  test_github.py  test_parse.py  test_pull.py
src/dev/: __init__.py  cli.py  comms.py  task_manager.py
src/dev/commands/: __init__.py  create_pr.py  repos.py  task.py
tests/: __init__.py  test_cli.py  test_create_pr.py  test_repo_config.py  test_task_manager.py
