[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dev-workspace"
version = "0.0.0"
requires-python = ">=3.9"
dependencies = ["dev"]

[project.optional-dependencies]
dev = ["tox", "pytest", "pytest-cov", "ruff"]

[tool.uv.sources]
dev = { workspace = true }

[tool.uv.workspace]
members = ["dev-sdk", "dev-cli", "dev-server"]
