[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dev-workspace"
version = "0.0.0"
requires-python = ">=3.9"
dependencies = ["dev", "dev-server"]

[project.optional-dependencies]
dev = ["tox", "pytest", "pytest-cov", "ruff"]

[tool.uv.workspace]
members = ["dev-sdk", "dev-cli", "dev-server", "dev-cloud-control", "dev-cloud-infra", "dev-cloud-worker"]

[tool.uv.sources]
dev = { workspace = true }
dev-server = { workspace = true }
dev-sdk = { workspace = true }
dev-cloud-control = { workspace = true }

[tool.ruff.lint]
# E402: module-level import not at top of file (no mid-file imports).
select = ["E4", "E7", "E9", "F"]
