[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dev-cloud-worker"
version = "0.1.0"
description = "Environment worker daemon for cloud dev"
requires-python = ">=3.11"
dependencies = [
    "dev-sdk",
    "dev-cloud-control",
    "requests>=2.31",
]

[tool.uv.sources]
dev-sdk = { workspace = true }
dev-cloud-control = { workspace = true }

[project.scripts]
dev-cloud-worker = "dev_cloud_worker.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
test = ["pytest"]
